<resources>
    <string name="app_name" translatable="false">SETI</string>
    <string name="image_contentDescription">Picture of a clock</string>
    <string name="let_s_get_started_text">Let\'s get started!</string>
    <string name="intro_text_description">Manage your time better with SETI</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_up_description_text">Enter your name, email and password, to register with us</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in_description_text">Enter your name and password, to log in</string>
    <string name="please_wait">Please wait…</string>

    <string name="please_enter_your_name">Please enter your name</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="registration_success">Registration completed!</string>
    <string name="login">Login</string>
    <string name="please_enter_your_login">Please enter your login</string>
    <string name="repeat_password">Repeat password</string>
    <string name="passwords_not_matching">Passwords are not matching!</string>
    <string name="please_repeat_your_password">Please repeat your password</string>

    <string name="nav_my_profile">My Profile</string>
    <string name="nav_my_settings">Settings</string>
    <string name="nav_sign_out">Sign Out</string>
    <string name="update">UPDATE</string>
    <string name="delete_account">DELETE ACCOUNT</string>
    <string name="permission_denied">You have denied the permission for storage access</string>
    <string name="login_already_used">Login is already used</string>
    <string name="delete_account_confirmation">Are you sure you want delete your account?</string>
    <string name="yes">YES</string>
    <string name="cancel">CANCEL</string>
    <string name="edit_email">Edit email</string>
    <string name="edit_password">Edit Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="repeat_new_password">Repeat New Password</string>
    <string name="editing_sensitive_data_requires_confirmation_with_password">Editing sensitive data requires confirmation with password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="send">SEND</string>

    <string name="add_new_regular_engagement">Add new regular engagement</string>
    <string name="study">Study</string>
    <string name="work">Work</string>
    <string name="other">Other</string>
    <string name="fill_required_fields_alert">Please fill required fields (Title, Start Time, End Time)</string>
    <string name="start_time_and_end_time_the_same_alert">Start Time and End Time cannot be the same!</string>
    <string name="engagement_ends_at_midnight_alert">Regular engagement cannot end at midnight!</string>
    <string name="end_time_before_start_time_alert">End time cannot be before Start Time!</string>
    <string name="start_time_interrupts_another_engagement_alert">Start time interrupts regular engagement </string>
    <string name="end_time_interrupts_another_engagement_alert">End time interrupts regular engagement </string>
    <string name="regular_engagement_duration_interrupts_alert">Regular engagement duration interrupts </string>
    <string name="start_time_must_be_before_end_time_alert">Start time must be before end time! </string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="edit_regular_engagement">Edit regular engagement</string>
    <string name="delete_regular_engagement">Delete regular engagement</string>
    <string name="day_of_week">Day of week</string>
    <string name="delete_regular_engagement_confirmation">Are you sure you want to delete this regular engagement?</string>
    <string name="delete_non_recurring_engagement_confirmation">Are you sure you want to delete this non-recurring engagement?</string>
    <string name="title">Title</string>
    <string name="text_to_speech">Text to speech</string>
    <string name="no_non_recurring_activities_available">No non-recurring activities available</string>
    <string name="non_recurring_engagements">Non-recurring Engagements</string>
    <string name="other_engagements">Other Engagements</string>
    <string name="start_date">Start date</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="end_date">End date</string>
    <string name="add_new_non_recurring_engagement">Add new non-recurring engagement</string>
    <string name="edit_engagement">Edit engagement</string>
    <string name="delete_engagement">Delete engagement</string>
    <string name="delete_non_recurring_engagement">Delete non-recurring engagement</string>
    <string name="additional_note">Additional note</string>
    <string name="assigned_members">Members</string>
    <string name="selected_user">Selected user</string>
    <string name="created_by">Created by:</string>
    <string name="engagement_members">Engagement members:</string>
    <string name="add_member">Add Member</string>
    <string name="add">ADD</string>
    <string name="search_member">Search Member</string>
    <string name="please_enter_users_email">Please enter user\'s email adrress</string>
    <string name="delete_member">Delete member</string>
    <string name="delete_member_confirmation">Are you sure you want to delete this member from your engagement?</string>
    <string name="user_is_not_owner">Only owner can edit assigned members!</string>
    <string name="user_cant_delete_itself">You can\'t delete yourself!</string>

    <string name="default_notification_channel_id">seti_notification_channel_id</string>
    <string name="study_capital">STUDY</string>
    <string name="work_capital">WORK</string>
    <string name="other_capital">OTHER</string>
    <string name="statistics">Statistics</string>
    <string name="monday"><b>Monday</b></string>
    <string name="tuesday"><b>Tuesday</b></string>
    <string name="wednesday"><b>Wednesday</b></string>
    <string name="thursday"><b>Thursday</b></string>
    <string name="friday"><b>Friday</b></string>
    <string name="saturday"><b>Saturday</b></string>
    <string name="sunday"><b>Sunday</b></string>
    <string name="number_of_owned_non_recurring_engagements"><b>Number of non-recurring engagements</b>:</string>
    <string name="number_of_assigned_non_recurring_engagements"><b>Number of non-recurring engagements assigned to:</b></string>
    <string name="longest_non_recurring_engagement_title"><b>The longest engagement in this month:</b></string>
    <string name="shortest_non_recurring_engagement_title"><b>The shortest engagement in this month:</b></string>
    <string name="lecture_room_number">Lecture room number</string>
    <string name="lecture_building_number">Lecture building number</string>
    <string name="man_week"><b>Work week</b></string>
    <string name="weekend"><b>Weekend</b></string>
    <string name="full_week"><b>Full week</b></string>
    <string name="regular_engagement_title">Regular engagement title</string>
    <string name="start_time_create_regular_engagement">Start time</string>
    <string name="end_time_create_regular_engagement">End time</string>
    <string name="pick_time">Pick Time</string>
    <string name="additional_note_optional">Additional note (Optional)</string>
    <string name="lecture_room_create_regular_engagement">Lecture room</string>
    <string name="lecture_buildingcreate_regular_engagement">Lecture building</string>
    <string name="add_new_engagement">ADD NEW ENGAGEMENT</string>
    <string name="type_of_the_engagement">Type of the engagement</string>
    <string name="save_edited_engagement">SAVE EDITED ENGAGEMENT</string>
    <string name="cancel_capital">CANCEL</string>
    <string name="non_recurring_engagement_title">Non-recurring engagement title</string>
    <string name="pick_date">PICK DATE</string>
    <string name="assigned_members_details_screen"><u>Assigned Members</u></string>
    <string name="here_you_can_customize_application_background">Here you can customize application background</string>
    <string name="none">None</string>
    <string name="high_contrast_mode_only_on_darkmode">For high contrast mode please turn on dark mode on the device</string>
    <string name="high_contrast_mode">High contrast mode</string>

    <string-array name="Languages">
        <item>English</item>
        <item>Polish</item>
    </string-array>

    <string-array name="DaysOfWeek">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string-array name="TypeOfEngagement">
        <item>Study</item>
        <item>Work</item>
        <item>Other</item>
    </string-array>

    <string-array name="StatsType">
        <item>Recurring Engagements Statistics</item>
        <item>Non-recurring Engagements Statistics</item>
    </string-array>
</resources>