<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_my_profile"
            android:icon="@drawable/ic_nav_user"
            android:title="@string/nav_my_profile"/>

        <item android:id="@+id/nav_non_recurring_engagements"
            android:icon="@drawable/ic_non_recurring_engagements"
            android:title="@string/other_engagements"/>

        <item android:id="@+id/nav_settings"
            android:icon="@drawable/ic_nav_settings"
            android:title="@string/nav_my_settings"/>

        <item android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_nav_sign_out"
            android:title="@string/nav_sign_out"/>
    </group>

</menu>