<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_speak_out_non_recurring_engagement"
        android:icon="@drawable/ic_text_to_speech"
        android:title="@string/text_to_speech"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/action_edit_non_recurring_engagement"
        android:icon="@drawable/ic_edit_regular_engagement"
        android:orderInCategory="100"
        android:title="@string/edit_engagement"
        />
    <item
        android:id="@+id/action_delete_non_recurring_engagement"
        android:icon="@drawable/ic_delete_regular_engagement"
        android:orderInCategory="100"
        android:title="@string/delete_engagement"
        />
</menu>