<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@drawable/main_background">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="false"
        >

        <RadioGroup
            android:id="@+id/rg_days_of_week"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            >

            <RadioButton
                android:id="@+id/rb_monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mon"
                android:button="@null"
                android:background="@drawable/bg_radio_button"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="16sp"
                />


            <RadioButton
                android:id="@+id/rb_tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tue"
                android:button="@null"
                android:background="@drawable/bg_radio_button"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="16sp"
                />

            <RadioButton
                android:id="@+id/rb_wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wed"
                android:button="@null"
                android:background="@drawable/bg_radio_button"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="16sp"
                />

            <RadioButton
                android:id="@+id/rb_thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thu"
                android:button="@null"
                android:background="@drawable/bg_radio_button"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="16sp"
                />

            <RadioButton
                android:id="@+id/rb_friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fri"
                android:button="@null"
                android:background="@drawable/bg_radio_button"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="16sp"
                />

            <RadioButton
                android:id="@+id/rb_saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sat"
                android:button="@null"
                android:background="@drawable/bg_radio_button"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="16sp"
                />

            <RadioButton
                android:id="@+id/rb_sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sun"
                android:button="@null"
                android:background="@drawable/bg_radio_button"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="16sp"
                />


        </RadioGroup>


    </HorizontalScrollView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:elevation="@dimen/card_view_elevation"
        app:cardCornerRadius="16dp"
        >

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_regular_engagements_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        tools:visibility="visible"/>

        <TextView
            android:id="@+id/tv_no_regular_engagements_available"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="No regular activities available"
            android:visibility="gone"
            android:gravity="center"/>



    </androidx.cardview.widget.CardView>



</LinearLayout>