<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_dialog_rounded"
        app:cardCornerRadius="@dimen/dialog_delete_account_cornerRadius"
        app:cardElevation="@dimen/dialog_delete_account_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/dialog_delete_account_padding">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dialog_account_delete_title_padding"
                android:text="@string/reset_your_password"
                android:textColor="@color/primary_text_color"
                android:textSize="@dimen/dialog_account_delete_title_text_size"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_reset_password_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_email_address"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/et_text_size"
                    android:visibility="visible" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/delete_account_dialog_action_layout_height"
                android:layout_marginTop="@dimen/delete_account_dialog_action_layout_marginTop"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_send_reset_password_email"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:padding="@dimen/delete_account_dialog_action_button_padding"
                    android:text="@string/send"
                    android:textColor="@color/secondary_color"
                    android:textSize="@dimen/delete_account_dialog_action_button_text_size" />

                <TextView
                    android:id="@+id/tv_cancel_reset_password"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:padding="@dimen/delete_account_dialog_action_button_padding"
                    android:text="@string/cancel"
                    android:textColor="@color/secondary_text_color"
                    android:textSize="@dimen/delete_account_dialog_action_button_text_size" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>