<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <LinearLayout
        android:id="@+id/ll_my_profile_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".activities.MyProfileActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.SETI.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_my_profile_activity"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/Theme.SETI.PopuopOverlay" />
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/secondary_color">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_my_profile_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/my_profile_screen_content_marginStartEnd"
                android:layout_marginTop="@dimen/my_profile_screen_content_marginTopBottom"
                android:layout_marginEnd="@dimen/my_profile_screen_content_marginStartEnd"
                android:layout_marginBottom="@dimen/my_profile_screen_content_marginTopBottom"
                android:elevation="@dimen/card_view_elevation"
                app:cardCornerRadius="@dimen/card_view_corner_radius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="@dimen/my_profile_screen_content_padding">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/my_profile_iv_user_image"
                        android:layout_width="@dimen/my_profile_user_image_size"
                        android:layout_height="@dimen/my_profile_user_image_size"
                        android:src="@drawable/ic_user_place_holder"
                        app:civ_border_color="@color/primary_text_color"
                        app:civ_border_width="1dp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/my_profile_name_til_marginTop">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/my_profile_et_login"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/login"
                            android:textSize="@dimen/et_text_size" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/my_profile_name_til_marginTop">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/my_profile_et_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name"
                            android:textSize="@dimen/et_text_size" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/tv_background_info_my_profile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/my_profile_et_email_marginTop"
                        android:gravity="center"
                        android:text="@string/here_you_can_customize_application_background"
                        android:textSize="14sp"
                        android:textStyle="italic"
                        android:visibility="gone"
                        tools:visibility="visible" />

                    <ImageView
                        android:id="@+id/my_profile_iv_user_background_image"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginTop="12dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/nav_header_main_background" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/sw_select_high_contrast_mode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="High contrast mode"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/sw_my_profile_edit_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/my_profile_et_email_marginTop"
                            android:layout_marginEnd="@dimen/my_profile_et_email_marginTop"
                            android:text="@string/edit_email"
                            android:textSize="16sp" />

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/sw_my_profile_edit_password"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/my_profile_et_email_marginTop"
                            android:text="@string/edit_password"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_my_profile_edit_sensitive_data"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/my_profile_et_email_marginTop"
                        android:gravity="center"
                        android:text="@string/editing_sensitive_data_requires_confirmation_with_password"
                        android:textSize="14sp"
                        android:textStyle="italic"
                        android:visibility="gone"
                        tools:visibility="visible" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        >

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/my_profile_et_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/my_profile_et_email_marginTop"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:textSize="@dimen/et_text_size"
                            android:visibility="gone"
                            tools:visibility="visible" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        >

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/my_profile_et_new_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/my_profile_et_email_marginTop"
                            android:hint="@string/new_password"
                            android:inputType="textPassword"
                            android:textSize="16sp"
                            android:visibility="gone"
                            tools:visibility="visible" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/my_profile_et_email_marginTop">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/my_profile_et_repeat_new_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/repeat_new_password"
                            android:inputType="textPassword"
                            android:textSize="16sp"
                            android:visibility="gone"
                            tools:visibility="visible" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        >

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/my_profile_et_current_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/my_profile_et_email_marginTop"
                            android:hint="@string/current_password"
                            android:inputType="textPassword"
                            android:textSize="16sp"
                            android:visibility="gone"
                            tools:visibility="visible" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btn_update"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/my_profile_btn_update_marginTop"
                        android:background="@drawable/sign_in_shape_button_rounded"
                        android:foreground="?attr/selectableItemBackground"
                        android:gravity="center"
                        android:paddingTop="@dimen/btn_paddingTopBottom"
                        android:paddingBottom="@dimen/btn_paddingTopBottom"
                        android:text="@string/update"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/btn_text_size" />

                    <TextView
                        android:id="@+id/btn_delete_account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/sign_up_screen_btn_marginTop"
                        android:background="@drawable/sign_up_shape_button_rounded"
                        android:foreground="?attr/selectableItemBackground"
                        android:gravity="center"
                        android:paddingTop="@dimen/btn_paddingTopBottom"
                        android:paddingBottom="@dimen/btn_paddingTopBottom"
                        android:text="@string/delete_account"
                        android:textColor="@android:color/holo_red_light"
                        android:textSize="@dimen/btn_text_size"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>

</ScrollView>

